--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,11 +52,9 @@ jobs:
       - name: Publish release
         id: create_release
         uses: ncipollo/release-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAGES_TOKEN }}
         with:
-          tag_name: canary
-          release_name: Chaldea Preview
+          tag: canary
+          name: Chaldea Preview
           body: Built at ${{ steps.get-date.outputs.date }}
           draft: false
           prerelease: true
