--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,8 @@ jobs:
       - name: Get Date
         id: get-date
         run: echo "::set-output name=date::$(/bin/date)"
+      - uses: actions/download-artifact@v3
+      - run: ll
 
       - name: Delete previous canary build
         uses: dev-drprasad/delete-tag-and-release@v0.2.0
