--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
           else
               echo "VERSION=preview" >> $GITHUB_ENV
           fi
-      - run: |
+      - shell: bash
+        run: |
           echo "VERSION = $VERSION"
 
