--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,30 +7,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  create-build:
-    name: Create ${{ matrix.target }} build
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        target: [Linux, Windows]
-        include:
-          - os: ubuntu-latest
-            target: Linux
-          - os: windows-latest
-            target: Windows
-      fail-fast: false
-    steps:
-      - name: Get Version
-        shell: bash
-        run: |
-          echo ${{ matrix.os }}
-          if [ "${{ startsWith(github.ref, 'refs/tags/v') }}" = "true" ]; then
-              echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
-          else
-              echo "VERSION=preview" >> $GITHUB_ENV
-          fi
-      - run: |
-          echo "VERSION = $VERSION"
-          echo "VERSION = ${env:VERSION}"
-          echo "VERSION = ${{env.VERSION}}"
+  test:
+    runs-on: ubuntu-latest
 
+    steps:
+      - name: Downgrade zstd
+        run: |
+          zstd --version
+          wget -O zstd152.tar.gz  https://github.com/facebook/zstd/releases/download/v1.5.2/zstd-1.5.2.tar.gz
+          tar -xvf zstd152.tar.gz
+          cd zstd152
+          make install
+          zstd --version
