--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,5 +17,5 @@ jobs:
           wget -O zstd.tar.gz  https://github.com/facebook/zstd/releases/download/v1.5.2/zstd-1.5.2.tar.gz
           tar -xvf zstd.tar.gz
           cd zstd-1.5.2
-          make install
+          sudo make install
           zstd --version
