--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,10 @@ jobs:
       - name: Downgrade zstd
         run: |
           zstd --version
-          wget -O zstd.tar.gz  https://github.com/facebook/zstd/releases/download/v1.5.2/zstd-1.5.2.tar.gz
-          tar -xvf zstd.tar.gz
-          cd zstd-1.5.2
-          sudo make install
+          # wget -O zstd.tar.gz  https://github.com/facebook/zstd/releases/download/v1.5.2/zstd-1.5.2.tar.gz
+          # tar -xvf zstd.tar.gz
+          # cd zstd-1.5.2
+          # sudo make install
+          wget -O zstd.deb http://mirrors.kernel.org/ubuntu/pool/main/libz/libzstd/zstd_1.5.2+dfsg-1_amd64.deb
+          sudo dpkg -i zstd.deb
           zstd --version
