--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           # tar -xvf zstd.tar.gz
           # cd zstd-1.5.2
           # sudo make install
-          sudo dpkg --remove zstd
+          sudo dpkg --remove --force-depends zstd
           wget -O zstd.deb http://mirrors.kernel.org/ubuntu/pool/main/libz/libzstd/zstd_1.5.2+dfsg-1_amd64.deb
           sudo dpkg -i zstd.deb
           zstd --version
