--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
+      - uses: actions/checkout@v3
       - name: Test Windows GITHUB_WORKSPACE
         run: |
           echo $env:GITHUB_WORKSPACE
